[package]
name = "geo-offset"
version = "0.1.1-alpha.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-offset"
documentation = "https://docs.rs/geo-offset/"
description = "Add margin and padding to geometric shapes"
keywords = ["geo", "polygon", "offset", "margin", "padding"]
categories = ["algorithms"]

[dependencies]
geo = "0.14"
itertools = "0.9.0"
geo-booleanop = "0.3"
num-traits = "0.2.11"

[dev-dependencies]
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.56"
once_cell = "1.4.0"
data-uri-utils = "0.1.0"
geo-svg = { git = "ssh://git@github.com/jsadusk/geo-svg" }
geo-types = "0.6"